archetect-templating/tests/snapshots/test_templates__vm@block_super_err.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ super() }}"
info: {}
input_file: archetect_templating/tests/inputs/block_super_err.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "cannot super outside of block",
    name: "block_super_err.txt",
    line: 1,
}

invalid operation: cannot super outside of block (in block_super_err.txt:1)
----------------------------- block_super_err.txt -----------------------------
   1 > {{ super() }}
     i    ^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

